fixed image expand/collapse problems

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -110,7 +110,7 @@ $left-bar-padding: $global-padding;
     }
 
     position: relative;
-    z-index: 5;
+    z-index: 500;
 
     color: $light-grey;
     display: block;
